force-app/main/default/objects/Case/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Dúvida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>