force-app/main/default/objects/Case/fields/Data_Ultima_Interacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Ultima_Interacao__c</fullName>
    <label>Data Última Interação</label>
    <type>DateTime</type>
</CustomField>