force-app/main/default/objects/Case/fields/Nivel_Urgencia__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Urgencia__c</fullName>
    <label>Nível de Urgência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Crítica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>