force-app/main/default/objects/Case/listViews/Suporte_N_vel_1_Case.listView-meta.xml
<ListView>
    <fullName>Suporte_N_vel_1_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Suporte Nível 1</label>
    <queue>Suporte_Nivel_1</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>