force-app/main/default/objects/Case/listViews/Suporte_Nivel_2_Case.listView-meta.xml
<ListView>
    <fullName>Suporte_Nivel_2_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Suporte Nível 2</label>
    <queue>Suporte_Nivel_2</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>